future proofing